refactor: Correcao de endentacao tabela e classe UsuarioService